# face_recognition

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/face_recognition/: main.py
tests/: test_main.py
